<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:background="#ccc"
            android:text="@string/DSItem" 
            android:layout_weight="3"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:background="#ccc"
            android:text="@string/DSValue" 
            android:textSize="25sp" 
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:background="#ccc"
            android:text="@string/DSUnit" 
            android:textSize="25sp" 
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <!--
    <FrameLayout
        android:id="@+id/datastreamFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      	android:layout_weight="1">
    </FrameLayout>
      -->
      
      <ListView android:id="@+id/ds"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1">
      </ListView>

</LinearLayout>